# webrtc-grabber-rs

./: Cargo.toml  run_grabber.sh
balancer/: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
grabber-client/: Cargo.toml
grabber-client/src/: gstreamer_webcam.rs  main.rs  webrtc_publisher.rs
local/: Cargo.toml
local/example/: config.yaml
local/src/: broadcaster.rs  config.rs  error.rs  lib.rs  session.rs  sfu.rs
proto/: Cargo.toml  build.rs  sfu.proto
proto/src/: lib.rs
remote/: Cargo.toml
server/: Cargo.toml
server/src/: error.rs  handlers.rs  lib.rs  main.rs  protocol.rs  state.rs  storage.rs  websocket.rs
server/src/handlers/: api.rs  grabber.rs  mod.rs  player.rs
server/web/: client.js  index.html
