[package]
name = "grabber-client"
version = "0.1.0"
edition = "2024"

[dependencies]
webrtc = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
scrap = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
cocoa = "0.26"
objc = "0.2"
