[package]
name = "sfu-local"
version = "0.1.0"
edition = "2024"

[dependencies]
sfu-core = { path = "../core" }
sfu-proto = { path = "../proto" }

webrtc = "0.14.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
dashmap = "5.5"
bytes = "1.5"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"