[package]
name = "webrtc-grabber-rs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
sfu-core = { path = "../core" }
sfu-proto = { path = "../proto" }
sfu-local = { path = "../local" }
sfu-remote = { path = "../remote" }
balancer = { path = "../balancer" }

tokio = { version = "1", features = ["full"] }
tonic = "0.10"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
signal-hook = "0.3"
