[package]
name = "webrtc-grabber-rs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
sfu-core = { path = "../core" }
sfu-proto = { path = "../proto" }
sfu-local = { path = "../local" }
sfu-remote = { path = "../remote" }
balancer = { path = "../balancer" }

anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
webrtc = "0.14"
chrono = "0.4"
futures = "0.3"